# cv2_rgb

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
cv2_rgb/: __init__.py
tests/: test_cv2_rgb.py
