[metadata]
name = cv2_rgb
description = Python wrapper over OpenCV which by default loads images in RGB as opposed to BGR
author = Bartłomiej Śmietanka
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 1.0.0

[options]
install_requires =
    numpy
    opencv-python
python_requires = >=3.7
packages = cv2_rgb
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
cv2_rgb = py.typed

[flake8]
max-line-length = 160
